# ai-usage-dashboard

./: .bazelrc  .gitignore  AGENTS.md  MODULE.bazel  WORKSPACE  madision_symphony_2025_2026_season  share_sessions.sh
.github/workflows/: marathon-tracker.yml  test.yml
internal_projects/: .gitignore
internal_projects/agy_quota_dashboard/: DESIGN.md  run.sh  start.sh  verify.py
internal_projects/auto_bidder/: .env.example  README.md
internal_projects/ebay_watcher/: Cargo.toml  README.md  config.example.toml  plan.md
internal_projects/ebay_watcher/ebay_watcher_core/: Cargo.toml
internal_projects/ebay_watcher/ebay_watcher_core/src/: config.rs  db.rs  error.rs  lib.rs  models.rs
internal_projects/ebay_watcher/ebay_watcher_core/src/ebay/: client.rs  mod.rs
internal_projects/ebay_watcher/ebay_watcher_daemon/: Cargo.toml
internal_projects/ebay_watcher/ebay_watcher_daemon/src/: main.rs  scheduler.rs  sync.rs
internal_projects/ebay_watcher/ebay_watcher_tui/: Cargo.toml
internal_projects/ebay_watcher/ebay_watcher_tui/src/: main.rs
internal_projects/ebay_watcher/ebay_watcher_tui/src/ui/: dashboard.rs  mod.rs
internal_projects/linux_dev_server/: .env.example  .gitignore  deploy.sh  server.yml  setup.sh
internal_projects/linux_scripts/: README.md  dng-cleanup.sh  large-dir-audit.sh  scripts_update.sh  verify-exif-timestamps.sh
internal_projects/service_control_plane/: README.md  plan.md
internal_projects/thinking_engine/: .gitignore  docker-compose.yml  requirements.txt  task_example_ebay.xml
projects/auto_bidder/: .gitignore  requirements.txt
projects/docker-standalone-to-compose/: README.md  docker-update.sh
projects/hello_world/: BUILD  hello_lib.cc  hello_lib.h  hello_test.cc  main.cc
projects/linux_dev_server/: .env.example  .gitignore  SETUP_GUIDE.md  buildbuddy.config.yaml  deploy.sh  docker-compose.yml  server.yml  setup.sh  setup_linux_client.sh
projects/linux_scripts/: BUILD.bazel  (+14 more)
skills/: .gitignore  run_skill.py  superpowers  wc_predict
(+247 files in other folders)
