[package]
name = "ebay_watcher_core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.38", features = ["full"] }
quick-xml = { version = "0.31", features = ["serialize"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
